<?xml version="1.0"?>
<package>
  <name>performance_tests</name>
  <version>0.1.0</version>
  <description>The performance_tests package</description>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_multiplot</run_depend>

  <export>
  </export>
</package>
